[FIX]z-index 관련 문제 수정

--- a/src/styles/findAccount.css
+++ b/src/styles/findAccount.css
@@ -92,3 +92,11 @@ cursor: not-allowed;
     margin-bottom: 50px;
 }
 
+/*팝업창*/
+.popup-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+}
